# Distill-Align

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  PROJECT_STRUCTURE.md  README.ar.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  changelog-enforcer.yml  ci.yml  codeql-analysis.yml  docs.yml  release.yml  security-scan.yml
docs/: changelog.md  cli-reference.md  configuration.md  getting-started.md  index.md
docs/api/: index.md
docs/guides/: best-practices.md  contributing.md  troubleshooting.md
docs/pipelines/: export.md  ingestion.md  synthesis.md
examples/: 01_basic_ingest.py  02_synthesize_openai.py  03_export_formats.py  04_custom_prompts.py  05_full_pipeline.py  README.md
examples/sample_data/: example.md
src/distill_align/: __init__.py
src/distill_align/cli/: __init__.py  main.py
src/distill_align/core/: __init__.py  cache.py  checkpoint.py  config.py  config_file.py  exceptions.py  json_utils.py  logging.py  pii_filter.py  schemas.py  telemetry.py  update_checker.py
src/distill_align/exporter/: __init__.py  dataset_card.py  hub.py  pipeline.py  preference_generator.py  splitter.py  unsloth_builder.py  validator.py
src/distill_align/exporter/formatters/: __init__.py  alpaca.py  base.py  chatml.py  conversation.py  hf_messages.py  jsonl.py  parquet.py  preference.py  sharegpt.py
src/distill_align/ingestion/: __init__.py  auto.py  pipeline.py
src/distill_align/ingestion/chunkers/: __init__.py  base.py  code.py  markdown.py
src/distill_align/ingestion/loaders/: __init__.py  base.py  code.py  csv_loader.py  docx.py  html.py  json_loader.py  jupyter.py  markdown.py  pdf.py  text.py  web.py
src/distill_align/synthesis/: __init__.py  conversation_builder.py  judge.py  pipeline.py  pruner.py  tokenizer.py  worker.py
src/distill_align/synthesis/models/: __init__.py  anthropic.py  azure.py  base.py  gemini.py  ollama.py  openai.py  registry.py  vllm.py
src/distill_align/synthesis/prompts/: __init__.py  scaffold.py  socratic.py
src/distill_align/synthesis/prompts/scaffold/: code_extract.j2  system.j2  tool_call.j2
src/distill_align/synthesis/prompts/socratic/: code.j2  markdown.j2  system.j2
src/distill_align/tui/: __init__.py  app.py
src/distill_align/tui/modes/: __init__.py  base.py
src/distill_align/tui/widgets/: __init__.py  help_overlay.py  preflight.py  wizard.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/property/: __init__.py  test_schemas.py
tests/unit/: __init__.py  test_chunkers.py  test_cli.py  test_formatters.py  test_http_clients.py  test_loaders.py  test_phase_modules.py  test_schemas.py  test_worker.py
