[tool.poetry]
name = "distill-align"
version = "0.1.1"
description = "The Structured Reasoning Extraction Factory — Generate high-quality fine-tuning datasets from raw domain data"
authors = ["o69dn"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/o69dn/Distill-Align"
repository = "https://github.com/o69dn/Distill-Align"
keywords = ["llm", "fine-tuning", "dataset", "distillation", "unsloth", "synthesis"]
packages = [{include = "distill_align", from = "src"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
# CLI & TUI
typer = "^0.12.0"
textual = "^0.58.0"
rich = "^13.7.0"
# Data Validation
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
# Async HTTP
httpx = ">=0.27.0"
# PDF Parsing
pypdf = "^4.2.0"
# Logging
loguru = "^0.7.0"
# Templates
jinja2 = "^3.1.0"
# Config file support
pyyaml = "^6.0"
# Token counting
tiktoken = ">=0.7.0"
# Loaders
python-docx = ">=1.1.0"
beautifulsoup4 = ">=4.12.0"
# Optional: HuggingFace Hub support
huggingface_hub = {version = "^0.23.0", optional = true}
# Optional: Parquet export
pyarrow = {version = ">=14.0.0", optional = true}

[tool.poetry.extras]
hub = ["huggingface_hub"]
parquet = ["pyarrow"]
web = []
judge = []
all = ["huggingface_hub", "pyarrow"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = ">=0.25.0"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.36.0"
pre-commit = "^3.7.0"
mypy = "^1.10.0"
ruff = "^0.9.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"

[tool.poetry.group.benchmark.dependencies]
pytest-benchmark = "^4.0"

[tool.poetry.group.property.dependencies]
hypothesis = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
distill-align = "distill_align.cli.main:entry_point"

# Ruff Configuration
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest Configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=distill_align --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=25"

# Bandit Configuration
[tool.bandit]
exclude_dirs = ["tests", ".github"]
skips = ["B110", "B112", "B311"]

# MyPy Configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = "pydantic.mypy"
